more title fixes on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -300,7 +300,7 @@ ul.simple {
     &.board {
         position: absolute;
         top: -3rem;
-        right: 0;
+        right: -15px;
 
         img {
             width: 100%;
@@ -310,7 +310,7 @@ ul.simple {
     &.cards {
         position: absolute;
         bottom: 0;
-        left: 0;
+        left: -15px;
 
         img {
             width: 85%;
@@ -776,20 +776,16 @@ footer {
 
     .project-intro {
         height: 80vh;
+
+        .project-title {
+            padding-right: 1rem;
+            justify-content: flex-start;
+            text-align: left;
+            margin-top: 10rem;
+            font-size: 2.25rem;
+        }
     }
 
-    .project-title {
-        padding-right: 1rem;
-        font-size: 6.5vw;
-    }
-
-    .contour .project-title,
-    .palantir-students .project-intro .project-title,
-    .welcome-screens .project-intro .project-title {
-        justify-content: flex-start;
-        margin-top: 10rem;
-        font-size: 2.25rem;
-    }
 
     #home {
         .copy,
